2025-12-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Work on Savannah #67735.

	* src/roff/troff/node.h (struct node):
	* src/roff/troff/node.cpp (class break_char_node)
	(node::get_break_code): Demote type of hyphenation codes from
	`int` to `unsigned char`, since the range of the latter is as
	much as has ever been stored in them anyway.  (This was
	discovered the hard way in Savannah #66919.)  Retype
	`break_code` and `prev_break_code` private member variables and
	`get_break_code()` public member function accordingly.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Improve type-correctness (slightly).

	* src/roff/troff/number.cpp: Define globals `hresolution`,
	`vresolution`, and `units_per_inch` as having `units` type
	rather than `int`.  This is merely _documentary_
	type-correctness, however, as `units` isn't strongly typed, but
	merely a slovenly `typedef` alias of `int`.
	* src/roff/troff/troff.h: Align declarations with foregoing
	definitions.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp: Fix code style nits.
	(font_info::set_bold)
	(troff_output_file::fill_color): Parenthesize formally complex
	expressions.
	(tfont::tfont)
	(real_output_file::~real_output_file)
	(zero_width_node::tprint)
	(translate_font): Explicitly compare value of pointer type to
	null pointer literal instead of letting it pun down to a
	Boolean.
	(translate_font)
	(configure_track_kerning)
	(constantly_space_font): Drop unnecessary parentheses from
	expression.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.

	* src/roff/troff/div.h: Rename declaration `cleanup_and_exit()`
	to `write_any_trailer_and_exit()`.  Comment formal argument
	name as a compromise with the Stroustrup-style C++ used in most
	of groff.
	* src/roff/troff/div.cpp (cleanup_and_exit): Rename this...
	(write_any_trailer_and_exit): ...to this.